components/Badge/badge.css
@import url(/components/Avatar/avatar.css);
.badges-wrapper {
  align-items: baseline;
  align-self: center;
  background-color: var(--white);
  display: flex;
  justify-content: center;
  justify-self: center;
  margin: 1rem;
  padding: 1rem;
  width: 80%;
}
.badge {
  position: relative;
}
/* Badge with avatars */
.avatar-badge {
  background-color: var(--dark-gray);
  border: 2px solid var(--white);
  border-radius: 50%;
  bottom: 2px;
  height: 1.5rem;
  position: absolute;
  right: 4px;
  width: 1.5rem;
}
.avatar-badge.online {
  background-color: var(--green);
}
.avatar-badge.busy {
  background-color: var(--red);
}
.avatar-badge.away {
  background-color: var(--orange);
}
.avatar-badge.offline {
  background-color: var(--light-gray);
}
/* Badge with icons */
.icon {
  font-size: 3rem;
  margin: 0 0.5rem;
  padding: 1rem;
}
.icon-container {
  position: relative;
}
.icon-badge {
  align-items: center;
  background-color: var(--primary-color);
  border-radius: 50%;
  color: var(--secondary-color);
  display: flex;
  font-size: 1rem;
  height: 2.5rem;
  justify-content: center;
  position: absolute;
  right: 0;
  top: 0;
  width: 2.5rem;
}

